refactor: Rename project to BCast and update branding
This commit renames the project from "BandCast Extension" to "BCast" and updates all related branding elements, including:
- Package.json name and version
- HTML page titles
- Metadata JSON fields
- Internal application names and display strings in React components
- Manifest.json name and version
- Console log messages
- Filenames and directory structures (implicitly, by renaming files)

Additionally, it includes preparatory work for Chromecast integration by:
- Adding a `CAST_APP_ID` to `extension/popup.tsx`.
- Preparing to inject a `cast_bridge.js` script in `extension/content.ts`.
- Updating `manifest.json` to include `cast_bridge.js` in `web_accessible_resources`.

--- a/popup.html
+++ b/popup.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BandCast Popup</title>
-    <!-- Note: In a production extension, you should bundle Tailwind CSS locally instead of using CDN due to CSP restrictions. 
-         For this build example, we assume permissions allow it or you will add a local css file. -->
+    <title>BCast Popup</title>
+    <!-- Load Cast SDK for Popup Context -->
+    <script src="https://www.gstatic.com/cast/sdk/libs/sender/v1/cast_framework.js?loadCastFramework=1"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       body { width: 300px; height: auto; margin: 0; padding: 0; overflow: hidden; }
