refactor: Simplify Chrome Extension messaging
The Chrome Extension's messaging architecture has been refactored for clarity and robustness.

The popup script no longer directly initializes the Cast SDK or makes `chrome.tabs.sendMessage` calls to fetch album data. Instead, it now sends a single message (`TRIGGER_CAST`) to the active tab's content script.

The content script, in turn, is responsible for:
1. Scraping the necessary Bandcamp album data.
2. Using `window.postMessage` to send this data to the injected `cast_bridge.js` script.

This change decouples the popup from direct SDK interaction and streamlines the data flow, leveraging the existing injected bridge script for casting initiation. The `cast_bridge.js` now dynamically loads the Cast SDK if it's not already present.

Additionally, Tailwind CSS configuration has been updated to include all necessary source paths, and `index.css` now imports Tailwind directives. Popup's `index.html` has also been simplified by removing direct script includes for the Cast SDK and Tailwind CSS, relying on Vite's injection.

--- a/popup.html
+++ b/popup.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BCast Popup</title>
-    <!-- Load Cast SDK for Popup Context -->
-    <script src="https://www.gstatic.com/cast/sdk/libs/sender/v1/cast_framework.js?loadCastFramework=1"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-      body { width: 300px; height: auto; margin: 0; padding: 0; overflow: hidden; }
-    </style>
+    <!-- CSS will be injected by Vite -->
   </head>
   <body>
     <div id="popup-root"></div>
