feat: Improve marquee animation and Vite config
Adds URL import to index.html for Vite.
Refactors marquee text animation for better overflow detection and duration calculation in TvInterface.tsx.
Updates Vite configurations to correctly handle __dirname and __filename using URL imports, ensuring proper path resolution for build processes.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     "vite": "https://aistudiocdn.com/vite@^7.2.4",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
     "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
-    "path": "https://aistudiocdn.com/path@^0.12.7"
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "url": "https://aistudiocdn.com/url@^0.11.4"
   }
 }
 </script>
